--- a/maven-build/action.yaml
+++ b/maven-build/action.yaml
@@ -20,8 +20,11 @@ runs:
   steps:
     - name: Set up JDK ${{ inputs.java-version }}
       uses: actions/setup-java@v2
+      id: setup-java
       with:
         java-version: ${{ inputs.java-version }}
         distribution: 'adopt'
     - name: Build with Maven
+      shell: bash
+      id: maven-build
       run: mvn clean install -f ${{ inputs.pom-file-path }}
