add latest tags for docker

--- a/docker-build-push/action.yaml
+++ b/docker-build-push/action.yaml
@@ -40,7 +40,9 @@ runs:
       shell: bash
       id: build-image
       run: |
-        docker build -t ${{ inputs.dockerHubLogin }}/${{ inputs.repo }}:${{ inputs.version }} ${{ inputs.context }}
+        docker build -t ${{ inputs.dockerHubLogin }}/${{ inputs.repo }}:${{ inputs.version }} \
+                      -t ${{ inputs.dockerHubLogin }}/${{ inputs.repo }}:latest \
+                      ${{ inputs.context }}
         if [ "${{ inputs.push }}" == "true" ]; then
           docker push  ${{ inputs.dockerHubLogin }}/${{ inputs.repo }}:${{ inputs.version }}
         fi
