--- a/docker-build-push/action.yaml
+++ b/docker-build-push/action.yaml
@@ -35,6 +35,7 @@ runs:
       id: echo-version-input
       run: |
         echo "${{ inputs.version }}"
+        echo "${{ inputs.push }}"
 
     - name: Build, tag, and push image to Docker Hub
       shell: bash
